TEST_PROGRAMS/INVALID/chia-wei_liu/invalid4.min
invalid_string = "a string is not supposed to have & symbol";
